app/components/style.css
body, html {
  margin: 0px;
  padding: 0px;
  font-family: Roboto, sans-serif;
  overflow: hidden;
  height: 100%;
  width: 100%;
}

.smallCol {
  width: 50px;
}

.medCol {
  width: 150px;
}

.iconCol {
  width: 15px;
}

.logSelect {
  float: left;
  font-size: 13px;
}

.logContent {
  background-color: #333;
  color: #DDD;
  padding: 20px;
  height: 322px;
  overflow-y: auto;
  font-size: 13px;
  font-family: "Courier New", Courier, monospace;
  white-space: pre-wrap;
}

.logHeader {
  background-color: #E8E8E8;
  padding-left: 15px;
  font-size: 13px;
}

.logViewer {
  background-color: #333;
  bottom: 0;
  width: 100%;
  flex: 0 1 400px;
}

#app {
  width: 100%;
  height: 100%;
}

.fullContainer {
  display: flex;
  flex-flow: column;
  height: 100%;
}

.newButton {
  position: absolute;
  bottom: 15px;
  right: 15px;
}

.topContainer {
  width: 100%;
  position: relative;
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
}

.dragBox {
  flex-grow: 1;
  justify-content: center;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #999;
  font-size:22px;
  background-color: #DDD;
}

.logo {
  display: block;
  width: 400px;
  opacity: 0.24;
  margin: auto;
}

.splash {
  background-color: #333;
  z-index: 1200;
  top: 0px;
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
}

.splash img {
  opacity: 0.24;
  width: 50%;
  margin: auto;
}

.splash-visible {
  visibility: visible;
  opacity: 1;
  transition: opacity 1s linear;
}

.splash-hidden {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 1s, opacity 1s linear;
}

